--- a/Modele/.htaccess
+++ b/Modele/.htaccess
@@ -1,4 +1,5 @@
-AuthUserFile "D:\wamp64\www\projet5\Modele\.htpasswd"
+AuthUserFile "D:\wamp64\www\projet5\avbf\Modele\.htpasswd"
 AuthName "Accès protégé"
 AuthType "Basic"
 Require valid-user
+
